# os-jit

./: .gitignore  CMakeLists.txt  README.md  build.sh  collect.sh  jit-executor.cpp
resources/: logarithm.dump  parse_int.dump  to_radix.dump  to_string.dump
resourses/: .code  jit10.dump  jit16.dump
script/: dump.sh  extract.sh  locate.sh
templates/: logarithm.hpp  logarithm.tmp  parse_int.hpp  parse_int.tmp  to_radix.hpp  to_radix.tmp  to_string.hpp  to_string.tmp
